--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -46,6 +46,7 @@ console.log(pwaInfo)
     <meta name="description" content="A site to read rendered USFM" />
     <script src="/src/pwa.ts"></script>
     {
+      // used to work with just teh virtual, but it says doesn't during an ssr build, so making sure to put manifest link here.  As long as the build process spits out manifest.webmanifest, this should be fine.
       import.meta.env.PROD && (
         <Fragment
           set:html={'<link rel="manifest" href="/manifest.webmanifest">'}
