--- a/src/pages/[user]/[repo].astro
+++ b/src/pages/[user]/[repo].astro
@@ -127,7 +127,7 @@ else if (repoProps.templateType === "BIBLE") {
 // Set props common to all pages:
 const preferredLocale = getPreferredLangFromHeader(Astro.request)
 const initialDictModule = await import(
-  `../../../translations/${preferredLocale}.json`
+  `../../translations/${preferredLocale}.json`
 )
 const initialDict = {
   [preferredLocale]: initialDictModule.default
