added support for downloading single usfm file for btt writer projects, and refactors typescript alias for types folder

--- a/src/pages/[user]/[repo].astro
+++ b/src/pages/[user]/[repo].astro
@@ -132,6 +132,7 @@ const initialDictModule = await import(
 const initialDict = {
   [preferredLocale]: initialDictModule.default
 }
+console.log(repoIndex.downloadLinks)
 ---
 
 <Layout
@@ -164,7 +165,7 @@ const initialDict = {
     <!-- #=============== TM TEMPLATE  ============= -->
     {
       repoProps.templateType === "TM" && (
-        <div class="tm-wrapper px- mx-auto h-full  max-w-[1400px] ">
+        <div class="tm-wrapper  mx-auto h-full  max-w-[1400px] ">
           <TranslationManual
             client:load
             initialHtml={repoProps.initialHtml}
@@ -194,7 +195,4 @@ const initialDict = {
   // window.addEventListener("popstate", (event) => {
   //   console.log({ event })
   // })
-  // function handleNav(details: any) {
-  //   console.log({ details })
-  // }
 </script>
