--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -294,6 +294,7 @@ a[href*="footnote-target"] {
   line-break: normal;
   display: block;
   margin-inline-start: 1.5em;
+  line-height: 1.3;
 }
 
 .poetry-2 {
@@ -301,6 +302,7 @@ a[href*="footnote-target"] {
   line-break: normal;
   display: block;
   margin-inline-start: 3em;
+  line-height: 1.3;
 }
 
 .poetry-3 {
@@ -308,6 +310,7 @@ a[href*="footnote-target"] {
   line-break: normal;
   display: block;
   margin-inline-start: 4.5em;
+  line-height: 1.3;
 }
 
 .poetry-outdent-1 {
