--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -84,5 +84,12 @@ const initialDict = {
       <slot />
       <!-- <ReloadPrompt /> -->
     </div>
+    <!-- Cloudflare Web Analytics -->
+    <script
+      defer
+      src="https://static.cloudflareinsights.com/beacon.min.js"
+      data-cf-beacon='{"token": "feb40c2dec594227888151cf163244d6"}'
+    ></script>
+    <!-- End Cloudflare Web Analytics -->
   </body>
 </html>
