tweaked one menu style and edited cors header

--- a/src/pages/[user]/[repo].astro
+++ b/src/pages/[user]/[repo].astro
@@ -198,7 +198,7 @@ const customFontFamily =
     {
       repoProps.templateType === "BIBLE" && (
         <ReaderWrapper
-          client:load
+          client:idle
           firstBookKey={repoProps.book}
           firstChapterToShow={repoProps.chapter}
           repoData={repoIndex}
