Wk rework settings (#13)
* adjust css to container, text, buttons, but not menu

* refactor menu to make styles more consistent

* progress made on settings refactor

* let a repo specifcy a web font by readign arbitrary custom meta data in index.json (#11)

Co-authored-by: Will Kelly <willkelly@Will-Kellys-Pro.local>

* sending setting refactor to thomas for review

* css tweak to background colors

* forgot to update the frozen lock file

* locked deps that were breaking

* integrate Thomas feedback on some ui bits

* integrate Thomas feedback on some ui bits

* integrate thomas feedback on settings module and add cloudflare tracking snippet

* tweaked one menu style and edited cors header

* move settings menu to right

* versioning the html service worker cache the minimize bad loads with broken styles

* remove comments and other dead code

---------

Co-authored-by: Will Kelly <willkelly@Will-Kellys-Pro.local>

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -60,7 +60,7 @@ const initialDict = {
     <meta name="description" content="A site to read rendered USFM" />
     <script src="/src/pwa.ts"></script>
     {
-      // used to work with just teh virtual, but it says doesn't during an ssr build, so making sure to put manifest link here.  As long as the build process spits out manifest.webmanifest, this should be fine.
+      // Astor pwa used to work with just the virtual script, but it wasn't for me during some builds, so going ahead and  making sure to put manifest link here in prod.  As long as the build process spits out manifest.webmanifest, this should be fine.
       import.meta.env.PROD && (
         <Fragment
           set:html={'<link rel="manifest" href="/manifest.webmanifest">'}
@@ -82,7 +82,13 @@ const initialDict = {
         repoUrl={repoUrl}
       />
       <slot />
-      <!-- <ReloadPrompt /> -->
     </div>
+    <!-- Cloudflare Web Analytics -->
+    <script
+      defer
+      src="https://static.cloudflareinsights.com/beacon.min.js"
+      data-cf-beacon='{"token": "feb40c2dec594227888151cf163244d6"}'
+    ></script>
+    <!-- End Cloudflare Web Analytics -->
   </body>
 </html>
