--- a/src/components/global/Nav/Nav.astro
+++ b/src/components/global/Nav/Nav.astro
@@ -24,8 +24,8 @@ import { Header } from "./Header"
 <div>
   <Header
     client:load
-    logo={Logo}
-    logoWebP={LogoWebP}
+    logo={Logo.src}
+    logoWebP={LogoWebP.src}
     menuItems={menu}
     repoUrl={repoUrl}
     preferredLocale={preferredLocale}
