--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -473,3 +473,21 @@ html[dir="rtl"] [class^="poetry-"] .versemarker {
   right: 0;
   left: unset;
 }
+
+
+/* @keyframes fadeIn {
+  from {
+    opacity: 0
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fadeOut {
+  from {
+    opacity: 1
+  }
+  to {
+    opacity: 0;
+  }
+} */
