--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
-import Layout from "../layouts/Layout.astro"
+import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout
   title="Read on Web"
   textDir="ltr"
-  repoUrl="https://content.bibletranslationtools.org/"
+  repoUrl={import.meta.env.PUBLIC_WACS_URL}
 >
   <main>
     <!-- noop. No home page -->
@@ -14,12 +14,12 @@ import Layout from "../layouts/Layout.astro"
 
 <script>
   // If landing on home page, absent a home page (above), just redirect to last visited page.  Updates as you nav throught the app
-  import { get } from "idb-keyval"
+  import { get } from "idb-keyval";
   async function goToLastVisted() {
-    let lastVisted = await get("lastPageVisited")
+    let lastVisted = await get("lastPageVisited");
     window.location.href = lastVisted
       ? lastVisted
-      : "/WycliffeAssociates/en_ulb/?book=John&chapter=1"
+      : "/WycliffeAssociates/en_ulb/?book=John&chapter=1";
   }
-  goToLastVisted()
+  goToLastVisted();
 </script>
